--- a/src/components/button.css
+++ b/src/components/button.css
@@ -15,6 +15,7 @@
   background-color: transparent;
   border-color: var(--button_border-color);
 }
+
 .Button_mode-outlined:focus-visible,
 .Button_mode-outlined:hover {
   border-color: var(--button_hover_border-color);
@@ -67,9 +68,15 @@
 .Button_size-s {
   height: 18px;
 }
+
 .Button_size-s-circle {
   width: 18px;
   justify-content: center;
+}
+
+.Button_icon_size-s {
+  width: 16px;
+  height: 16px;
 }
 
 .Button_size-s-button {
@@ -86,18 +93,25 @@
 }
 
 .Button_size-s .Button_icon::before {
-  font-size: 10px;
+  font-size: var(--font-size-s);
 }
+
 .Button_size-m .Button_icon::before {
-  font-size: 14px;
+  font-size: var(--font-size-m);
 }
+
 .Button_size-l .Button_icon::before {
-  font-size: 20px;
+  font-size: var(--font-size-l);
 }
 
 .Button_size-m-circle {
   width: 24px;
   justify-content: center;
+}
+
+.Button_icon_size-m {
+  width: 22px;
+  height: 22px;
 }
 
 .Button_size-m-button {
@@ -118,6 +132,11 @@
   justify-content: center;
 }
 
+.Button_icon_size-l {
+  width: 38px;
+  height: 38px;
+}
+
 .Button_size-l-button {
   padding: 0 20px;
 }
@@ -128,15 +147,15 @@
 }
 
 .Button_font-size-s {
-  font-size: 10px;
+  font-size: var(--font-size-s);
 }
 
 .Button_font-size-m {
-  font-size: 14px;
+  font-size: var(--font-size-m);
 }
 
 .Button_font-size-l {
-  font-size: 24px;
+  font-size: var(--font-size-l);
 }
 
 .Button_icon {
@@ -144,6 +163,7 @@
 }
 
 .Button_caption {
+  color: var(--text_color);
 }
 
 .Button_caption-position-end {
