--- a/src/components/inputBlock.css
+++ b/src/components/inputBlock.css
@@ -6,7 +6,7 @@
   outline: none;
   border: 0px;
   border-bottom: 1px solid #ebeced;
-  height: 33px;
+  height: 50px;
   font-size: 14px;
   margin-right: 6px;
   resize: none;
@@ -17,7 +17,9 @@
   border-block-color: #bcbcbc;
 }
 
-.InputBlock_Buttons {
+.InputBlock_buttons {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
