--- a/src/components/panel.css
+++ b/src/components/panel.css
@@ -1,15 +1,16 @@
 .Panel {
-  width: var(--panel_width);
-  height: var(--panel_height);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
-  border-radius: 12px 12px 6px 6px;
+  width: inherit;
+  height: inherit;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  border-radius: var(--padding-l) var(--padding-l) var(--padding-st) var(--padding-st);
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  background-color: var(--bg);
 }
 
 .Panel_header {
-  height: 50px;
+  height: var(--panel_header_height);
   text-align: center;
   display: flex;
   background-color: var(--panel_header_bg);
@@ -18,27 +19,27 @@
 
 .Panel_header-caption {
   color: var(--contrast_text_color);
-  font-size: 18px;
-  padding: 0 12px;
+  font-size: var(--font-size-mt);
+  padding: 0 var(--padding-l);
   margin: auto;
 }
 
 .Panel_header_close {
-  width: 24px;
-  height: 24px;
-  margin: auto 5px;
-  background: #BCBEC070;
+  width: var(--inline-height-m);
+  height: var(--inline-height-m);
+  margin: auto var(--padding-st);
+  background: var(--translucent_dark_bg);
   border-radius: 50%;
   display: flex;
   cursor: pointer;
 }
 
 .Panel_header_close:hover {
-  background: #BCBEC080;
+  background: var(--translucent_hover_dark_bg);
 }
 
 .Panel_header_close:active {
-  background: #BCBEC090;
+  background: var(--translucent_active_dark_bg);
 }
 
 .Panel_content {
@@ -52,7 +53,7 @@
 .Panel_footer {
   height: 56px;
   border-top: 1px solid var(--border_color);
-  padding: 3px 6px;
+  padding: var(--padding-s) var(--padding-st);
   align-items: center;
   flex-shrink: 0;
 }
