--- a/src/components/inputBlock.css
+++ b/src/components/inputBlock.css
@@ -1,25 +1,26 @@
 .InputBlock {
-  display: flex;
+    display: flex;
 }
 
 .InputBlock_textarea {
-  outline: none;
-  border: 0px;
-  border-bottom: 1px solid var(--unaccented_border_color);
-  height: 50px;
-  font-size: var(--font-size-m);
-  margin-right: var(--padding-st);
-  resize: none;
-  flex-grow: 1;
+    outline: none;
+    border: 0;
+    border-bottom: 1px solid var(--unaccented_border_color);
+    height: 50px;
+    font-size: var(--font-size-m);
+    margin-right: var(--padding-st);
+    resize: none;
+    flex-grow: 1;
 }
 
 .InputBlock_textarea:focus {
-  border-block-color: var(--unaccented_active_border_color);
+    border-block-color: var(--unaccented_active_border_color);
 }
 
 .InputBlock_buttons {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: var(--padding-s);
 }
