--- a/src/components/popup.css
+++ b/src/components/popup.css
@@ -1,17 +1,18 @@
-.Popup {
+.um-Popup {
     position: fixed;
+    z-index: 999;
     top: 0;
     left: 0;
     opacity: 1;
-    animation: PopupVisible 0.3s;
+    animation: um-PopupVisible 0.3s;
 }
 
-.is-mobile .Popup {
+.um-is-mobile .um-Popup {
     top: 0;
-    animation: MobilePopupVisible 0.6s;
+    animation: um-MobilePopupVisible 0.6s;
 }
 
-@keyframes PopupVisible {
+@keyframes um-PopupVisible {
     0% {
         opacity: 0;
     }
@@ -20,12 +21,12 @@
     }
 }
 
-@keyframes MobilePopupVisible {
+@keyframes um-MobilePopupVisible {
     0% {
         top: 100vh;
         opacity: 0;
     }
-    40% {
+    50% {
         opacity: 1;
     }
     100% {
